--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev:windows": "powershell -ExecutionPolicy Bypass -File scripts/dev-with-cleanup.ps1",
     "dev:simple": "vite",
     "test": "vitest",
-    "build": "pnpm lint && tsc && vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 50",
+    "build": "tsc && vite build",
+    "lint": "eslint src/ --report-unused-disable-directives --max-warnings 50",
     "lint:fix": "eslint . --report-unused-disable-directives --max-warnings 50 --fix",
     "preview": "vite preview",
     "install:dev": "pnpm install && pnpm link ../phantomartist",
