--- a/.github/workflows/render-build-check.yml
+++ b/.github/workflows/render-build-check.yml
@@ -29,6 +29,7 @@ jobs:
           echo "shamefully-hoist=true" > .npmrc
           echo "strict-peer-dependencies=false" >> .npmrc
           echo "@collinlucke:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
 
       - name: Install dependencies
         run: pnpm install
