--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,22 @@ services:
   - type: web
     name: baphomet-ui
     env: static
-    buildCommand: pnpm build
+    buildCommand: |
+      echo "Installing dependencies..."
+      pnpm install --frozen-lockfile --verbose
+      echo "Building application..."
+      pnpm build
+      echo "Build complete. Checking dist directory..."
+      ls -la dist/
     staticPublishPath: ./dist
+    buildFilter:
+      paths:
+        - src/**
+        - public/**
+        - package.json
+        - pnpm-lock.yaml
+        - tsconfig.json
+        - vite.config.mjs
     envVars:
       - key: GRAPHQL_BAPHOMET_SERVER_RENDER_URL
         value: https://baphomet-server.onrender.com/graphql
