--- a/.github/workflows/render-build-check.yml
+++ b/.github/workflows/render-build-check.yml
@@ -29,12 +29,19 @@ jobs:
           echo "shamefully-hoist=true" > .npmrc
           echo "strict-peer-dependencies=false" >> .npmrc
           echo "@collinlucke:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GIT_REGISTRY_TOKEN }}" >> .npmrc
+
+      - name: Verify npmrc
+        run: |
+          echo "Checking .npmrc content (auth token hidden):"
+          cat .npmrc | sed 's/authToken=.*/authToken=[hidden]/'
+          echo "Auth token present: ${{ secrets.GIT_REGISTRY_TOKEN != '' }}"
 
       - name: Install dependencies
-        run: pnpm install
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GIT_REGISTRY_TOKEN }}
+          GIT_REGISTRY_TOKEN: ${{ secrets.GIT_REGISTRY_TOKEN }}
+        run: pnpm install
 
       - name: Build
         run: pnpm build
