try it again: 01

--- a/.github/workflows/render-build-check.yml
+++ b/.github/workflows/render-build-check.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           echo "Checking .npmrc content (auth token hidden):"
           cat .npmrc | sed 's/authToken=.*/authToken=[hidden]/'
-          echo "Auth token present: ${{ secrets.GIT_REGISTRY_TOKEN != '' }}"
+          echo "Auth token present: ${{ secrets.GIT_REGISTRY_TOKEN}}"
 
       - name: Install dependencies
         env:
