--- a/.github/workflows/render-build-check.yml
+++ b/.github/workflows/render-build-check.yml
@@ -28,24 +28,14 @@ jobs:
         run: |
           echo "shamefully-hoist=true" > .npmrc
           echo "strict-peer-dependencies=false" >> .npmrc
-          echo "@collinlucke:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GIT_REGISTRY_TOKEN }}" >> .npmrc
+          echo "@collinlucke:registry=https://registry.npmjs.org/" >> .npmrc
 
       - name: Verify npmrc
         run: |
-          echo "Checking .npmrc content (auth token hidden):"
-          cat .npmrc | sed 's/authToken=.*/authToken=[hidden]/'
-          if [ -z "${{ secrets.GIT_REGISTRY_TOKEN }}" ]; then
-            echo "ERROR: GIT_REGISTRY_TOKEN is empty!"
-            exit 1
-          fi
-          echo "Auth token length: ${#GIT_REGISTRY_TOKEN}"
-        env:
-          GIT_REGISTRY_TOKEN: ${{ secrets.GIT_REGISTRY_TOKEN }}
+          echo "Checking .npmrc content:"
+          cat .npmrc
 
       - name: Install dependencies
-        env:
-          GIT_REGISTRY_TOKEN: ${{ secrets.GIT_REGISTRY_TOKEN }}
         run: |
           echo "Regenerating lockfile and installing..."
           rm -f pnpm-lock.yaml
