--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baphomet-ui",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "type": "module",
   "scripts": {
     "dev": "bash scripts/dev-with-cleanup.sh",
@@ -39,6 +39,7 @@
     "phantomartist": "latest",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "rollup-plugin-delete": "^3.0.1",
     "vite-plugin-static-copy": "^3.1.2"
   },
@@ -58,6 +59,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
     "nodemon": "^3.1.10",
