--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
     "dev": "bash scripts/dev-with-cleanup.sh",
     "dev:windows": "powershell -ExecutionPolicy Bypass -File scripts/dev-with-cleanup.ps1",
     "dev:simple": "vite",
+    "dev:local": "pnpm use:local && pnpm dev",
     "test": "vitest",
     "build": "tsc && vite build",
     "lint": "eslint src/ --report-unused-disable-directives --max-warnings 50",
     "lint:fix": "eslint . --report-unused-disable-directives --max-warnings 50 --fix",
     "preview": "vite preview",
+    "link:athame": "pnpm link ../athameui",
+    "unlink:athame": "pnpm unlink athameui",
+    "use:local": "pnpm add athameui@link:../athameui",
+    "use:published": "pnpm add athameui@^0.0.2",
+    "install:athame:dev": "bash scripts/use-local-athameui.sh",
+    "install:athame:prod": "bash scripts/use-npm-athameui.sh",
+    "install:both:dev": "bash scripts/use-both-local.sh",
+    "install:both:prod": "bash scripts/use-both-prod.sh",
     "install:dev": "bash scripts/use-local-phantomartist.sh",
-    "install:prod": "bash scripts/use-npm-phantomartist.sh"
+    "install:prod": "bash scripts/use-npm-phantomartist.sh",
+    "postinstall": "pnpm use:local"
   },
   "dependencies": {
     "@apollo/client": "^4.0.4",
@@ -30,13 +40,14 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/runner": "^3.2.4",
     "apollo-upload-client": "^19.0.0",
+    "athameui": "link:..\\athameui",
     "dotenv": "^17.2.2",
     "graphql": "^16.11.0",
     "hugeicons-react": "^0.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "party-js": "^2.2.0",
-    "phantomartist": "latest",
+    "phantomartist": "file:../phantomartist",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
