Update package.json for staging deploy

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "install:both:dev": "bash scripts/use-both-local.sh",
     "install:both:prod": "bash scripts/use-both-prod.sh",
     "install:dev": "bash scripts/use-local-phantomartist.sh",
-    "install:prod": "bash scripts/use-npm-phantomartist.sh",
-    "postinstall": "pnpm use:local"
+    "install:prod": "bash scripts/use-npm-phantomartist.sh"
   },
   "dependencies": {
     "@apollo/client": "^4.0.4",
@@ -30,7 +29,7 @@
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
-    "@collinlucke/phantomartist": "link:../phantomartist",
+    "@collinlucke/phantomartist": "^1.4.1",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.1",
     "@floating-ui/react": "^0.27.16",
@@ -40,14 +39,14 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/runner": "^3.2.4",
     "apollo-upload-client": "^19.0.0",
-    "athameui": "link:..\\athameui",
+    "athameui": "^0.0.4",
     "dotenv": "^17.2.2",
     "graphql": "^16.11.0",
     "hugeicons-react": "^0.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "party-js": "^2.2.0",
-    "phantomartist": "file:../phantomartist",
+    "phantomartist": "latest",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
