--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baphomet-ui",
-  "version": "1.7.1",
+  "version": "1.8.0",
   "type": "module",
   "scripts": {
     "dev": "bash scripts/dev-with-cleanup.sh",
@@ -15,13 +15,14 @@
     "link:athame": "pnpm link ../athameui",
     "unlink:athame": "pnpm unlink athameui",
     "use:local": "pnpm add athameui@link:../athameui",
-    "use:published": "pnpm add athameui@^0.0.2",
+    "use:published": "pnpm add athameui@^0.0.6-c",
     "install:athame:dev": "bash scripts/use-local-athameui.sh",
     "install:athame:prod": "bash scripts/use-npm-athameui.sh",
     "install:both:dev": "bash scripts/use-both-local.sh",
     "install:both:prod": "bash scripts/use-both-prod.sh",
     "install:dev": "bash scripts/use-local-phantomartist.sh",
-    "install:prod": "bash scripts/use-npm-phantomartist.sh"
+    "install:prod": "bash scripts/use-npm-phantomartist.sh",
+    "postinstall": "pnpm use:local"
   },
   "dependencies": {
     "@apollo/client": "^4.0.4",
@@ -29,7 +30,7 @@
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
-    "@collinlucke/phantomartist": "link:..\\phantomartist",
+    "@collinlucke/phantomartist": "link:../phantomartist",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.1",
     "@floating-ui/react": "^0.27.16",
@@ -41,14 +42,15 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/runner": "^3.2.4",
     "apollo-upload-client": "^19.0.0",
-    "athameui": "^0.0.4",
+    "athameui": "link:..\\athameui",
     "dotenv": "^17.2.2",
     "graphql": "^16.11.0",
     "hugeicons-react": "^0.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "motion": "^12.30.0",
     "party-js": "^2.2.0",
-    "phantomartist": "latest",
+    "phantomartist": "file:../phantomartist",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
