Fix for failing deploy

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "link:athame": "pnpm link ../athameui",
     "unlink:athame": "pnpm unlink athameui",
     "use:local": "pnpm add athameui@link:../athameui",
-    "use:published": "pnpm add athameui@^0.0.6-c",
+    "use:published": "pnpm add athameui@^0.0.7",
     "install:athame:dev": "bash scripts/use-local-athameui.sh",
     "install:athame:prod": "bash scripts/use-npm-athameui.sh",
     "install:both:dev": "bash scripts/use-both-local.sh",
@@ -30,7 +30,6 @@
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
-    "@collinlucke/phantomartist": "link:../phantomartist",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.1",
     "@floating-ui/react": "^0.27.16",
@@ -50,7 +49,7 @@
     "jsonwebtoken": "^9.0.2",
     "motion": "^12.30.0",
     "party-js": "^2.2.0",
-    "phantomartist": "file:../phantomartist",
+    "phantomartist": "latest",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
