--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/runner": "^3.2.4",
     "apollo-upload-client": "^19.0.0",
-    "athameui": "link:..\\athameui",
+    "athameui": "0.0.7",
     "dotenv": "^17.2.2",
     "graphql": "^16.11.0",
     "hugeicons-react": "^0.3.0",
